plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.z7design'
version = '1.0.0'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

ext {
	set('jjwtVersion', '0.11.5')
	set('lombokVersion', '1.18.30')
    set('googleApiClientVersion', '2.5.0')
    set('testcontainersVersion', '1.19.3')
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

    // JWT
	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

    // Database
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.flywaydb:flyway-core:10.10.0'
	runtimeOnly 'org.flywaydb:flyway-database-postgresql:10.10.0'
	testImplementation 'com.h2database:h2'
    testImplementation 'com.icegreen:greenmail:2.0.1'

    // Lombok & MapStruct - Lombok PRIMEIRO para gerar getters/setters antes do MapStruct
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // Utils
	implementation 'org.apache.commons:commons-text:1.11.0'
	implementation 'org.apache.poi:poi:5.2.4'
	implementation 'org.apache.poi:poi-ooxml:5.2.4'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // PDF & OCR
	implementation 'org.apache.pdfbox:pdfbox:2.0.29'
	implementation 'com.itextpdf:kernel:7.2.5'
	implementation 'com.itextpdf:io:7.2.5'
	implementation 'com.itextpdf:layout:7.2.5'
	implementation 'com.itextpdf:pdfa:7.2.5'
	implementation 'com.github.librepdf:openpdf:1.3.30'
	implementation 'net.sf.jasperreports:jasperreports:6.20.6'
	implementation 'net.sf.jasperreports:jasperreports-fonts:6.20.6'
	implementation 'net.sourceforge.tess4j:tess4j:5.8.0'
    implementation 'com.bucket4j:bucket4j-core:8.7.0'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.xhtmlrenderer:flying-saucer-pdf:9.1.22'
    implementation 'org.apache.commons:commons-imaging:1.0-alpha3'

    // Redis & Storage
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'io.minio:minio:8.5.2'

    // Facial Recognition
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.78.1'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    
    // QR Code
    implementation 'com.google.zxing:core:3.5.2'
    implementation 'com.google.zxing:javase:3.5.2'

    // Google Drive
    implementation "com.google.api-client:google-api-client:${googleApiClientVersion}"
    implementation 'com.google.apis:google-api-services-drive:v3-rev20230815-2.0.0'
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.23.0'

    // Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation "org.testcontainers:testcontainers:${testcontainersVersion}"
    testImplementation "org.testcontainers:postgresql:${testcontainersVersion}"
    testImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
}

// Lombok deve rodar antes do MapStruct - ordem das dependências annotationProcessor
tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ["-parameters"]
}

sourceSets {
	test {
		java {
			// Testes antigos que referenciam classes removidas ficam no pacote
			// *.disabled/* e são excluídos da compilação de testes.
			exclude '**/disabled/**'
		}
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
